--- a/playvie-frontend/src/app/components/nav-bar/nav-bar.component.html
+++ b/playvie-frontend/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <nav>
     <ul>
-        <li><a href="./">por el piso ma</a></li>
+        <li><a href="./">por el piso ma'</a></li>
     </ul>
 </nav>
 <h2>Desde el navbar</h2>
