edited navbar and components

--- a/playvie-frontend/src/app/components/nav-bar/nav-bar.component.html
+++ b/playvie-frontend/src/app/components/nav-bar/nav-bar.component.html
@@ -1,7 +1,8 @@
-<nav>
+<nav class="menu">
+    <img src="" alt="">
     <ul>
-        <li><a href="./">por el piso ma</a></li>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Estrenos</a></li>
+        <li><a href="#">Categorias</a></li>
     </ul>
 </nav>
-<h2>Desde el navbar</h2>
-<p>barrio fino</p>
