the navbar was created without a complex css style but the structe was defined

--- a/playvie-frontend/src/app/components/nav-bar/nav-bar.component.html
+++ b/playvie-frontend/src/app/components/nav-bar/nav-bar.component.html
@@ -1,8 +1,16 @@
 <nav class="menu">
-    <img src="" alt="">
-    <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Estrenos</a></li>
-        <li><a href="#">Categorias</a></li>
-    </ul>
+    <div class="nav-left">
+        <img src="" alt="">
+        <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Estrenos</a></li>
+            <li><a href="#">Categorias</a></li>
+        </ul>
+    </div>
+    <div class="nav-right">
+        <ul>
+            <li><a href="#">Sign in</a></li>
+            <li><a href="#">Register</a></li>
+        </ul>
+    </div>
 </nav>
