--- a/playvie-frontend/src/app/components/nav-bar/nav-bar.component.css
+++ b/playvie-frontend/src/app/components/nav-bar/nav-bar.component.css
@@ -1,7 +1,39 @@
+:root{
+    --text-white:#ffffff;
+}
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    background-color: red;
+}
 .menu{
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 1rem;
+    border: 1px solid red;
+}
+
+.nav-left{
+    display: flex;
+}
+
+.menu ul{
     display: flex;
 }
 
 .menu ul li{
     list-style: none;
+}
+
+.menu ul li a{
+    text-decoration: none;
+    margin-right: 10px;
+    color: var(--text-white);
+
+}
+
+.nav-right{
+    display: flex;
 }
