--- a/playvie-frontend/src/app/components/nav-bar/nav-bar.component.html
+++ b/playvie-frontend/src/app/components/nav-bar/nav-bar.component.html
@@ -1,11 +1,16 @@
 <nav class="menu">
     <div class="nav-left">
-        <img src="" alt="">
+        <img src="./../../../assets/playvie-logo.png" alt="">
         <ul>
             <li><a href="#">Inicio</a></li>
             <li><a href="#">Estrenos</a></li>
             <li><a href="#">Categorias</a></li>
         </ul>
+    </div>
+    <div>
+        <form class="search-field" action="">
+            <input type="text" id="search" value="Find it!">
+        </form>
     </div>
     <div class="nav-right">
         <ul>
