--- a/playvie-frontend/src/app/components/header/header.component.css
+++ b/playvie-frontend/src/app/components/header/header.component.css
@@ -1,33 +1,5 @@
-
-
-
-.menu{
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem 1rem;
-    border: 1px solid red;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.5) 30%, rgba(0,0,0,0));
-}
-
-.nav-left{
-    display: flex;
-}
-
-.menu ul{
-    display: flex;
-}
-
-.menu ul li{
-        list-style: none;
-}
-
-.menu ul li a{
-    text-decoration: none;
-    margin-right: 10px;
-    color: var(--text-white);
-
-}
-
-.nav-right{
-    display: flex;
+.proof{
+    width: 100vw;
+    height: 400px;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.5) 10%, rgba(0,0,0,0));
 }
