ajuste estetico del buscador

--- a/playvie-frontend/src/app/components/nav-bar/nav-bar.component.html
+++ b/playvie-frontend/src/app/components/nav-bar/nav-bar.component.html
@@ -7,9 +7,9 @@
             <li><a href="#">Categorias</a></li>
         </ul>
     </div>
-    <div>
-        <form class="search-field" action="">
-            <input type="text" id="search" value="Find it!">
+    <div class="search-field">
+        <form onsubmit="">
+            <search-input></search-input>
         </form>
     </div>
     <div class="nav-right">
