--- a/playvie-frontend/src/app/components/nav-bar/nav-bar.component.css
+++ b/playvie-frontend/src/app/components/nav-bar/nav-bar.component.css
@@ -43,7 +43,7 @@
     display: flex;
     margin-right: 20px;
 }
-#search{
-    width: 200px;
+.search-field{
+    width: 500px;
     height: 30px;
 }
