highlight content created

--- a/playvie-frontend/src/app/components/movies-highlight/movies-highlight.component.html
+++ b/playvie-frontend/src/app/components/movies-highlight/movies-highlight.component.html
@@ -3,7 +3,7 @@
         <div class="highlight-content">
             <h2>American pie 2</h2>
             <p>Having spent a year apart after joining college, a group of friends decide to reunite at a beach house. In their efforts to have a nice time, they land up encountering troublesome situations.</p>
-            <button><i class="fa fa-info-circle"></i> Mas Información</button>
+            <app-main-button></app-main-button>
         </div>
     </div>
     <video src="https://carontestudio.com/img/f4.mp4" autoplay="true" muted="true" loop="true"></video>
