--- a/playvie-frontend/src/app/components/nav-bar/nav-bar.component.css
+++ b/playvie-frontend/src/app/components/nav-bar/nav-bar.component.css
@@ -1,6 +1,3 @@
-
-
-
 .menu{
     display: flex;
     justify-content: space-between;
@@ -11,6 +8,7 @@
     top: 0;
     width: 100vw;
     height: 60px;
+    z-index: 9999;
 }
 
 .menu .nav-left img{
