--- a/playvie-frontend/src/app/components/movies-highlight/movies-highlight.component.css
+++ b/playvie-frontend/src/app/components/movies-highlight/movies-highlight.component.css
@@ -1,22 +1,23 @@
 .sect {
     width: 100vw;
-    min-height: 500px;
     position: relative;
+    height: 100vh;
 }
 video {
     position: absolute;
     right: 0;
     bottom: 0;
     min-height: 100%;
-    transform: translateX(calc((100% - 100vw) / 2));
     z-index: -2;
+    width: 100vw;
+    height: 100vh;
 }
 
 .highlight-description{
     width: 400px;
     padding: 30px;
     position: absolute;
-    bottom: 10vh;
+    bottom: 30vh;
     left: 3vw;
 }
 
