--- a/playvie-frontend/src/app/app.component.html
+++ b/playvie-frontend/src/app/app.component.html
@@ -2,4 +2,6 @@
     <app-nav-bar></app-nav-bar>
     <app-header></app-header>
     <app-movies-slider></app-movies-slider>
+    <app-movies-slider></app-movies-slider>
+    <app-movies-slider></app-movies-slider>
 </section>
