--- a/playvie-frontend/src/app/components/card-movie/card-movie.component.css
+++ b/playvie-frontend/src/app/components/card-movie/card-movie.component.css
@@ -4,10 +4,16 @@
     background: var(--input-button);
     overflow: hidden;
     margin-right: 20px;
+    cursor: pointer;
 }
 
 .card-movie img{
     height: 200px;
     object-fit: contain;
     object-position: center;
+}
+
+.card-movie:hover{
+    width: 400px;
+    height: 300px;
 }
