--- a/playvie-frontend/src/app/components/movies-slider/movies-slider.component.html
+++ b/playvie-frontend/src/app/components/movies-slider/movies-slider.component.html
@@ -1,6 +1,6 @@
 <section class="slider-container">
     <h1>The top ones</h1>
-    <div class="slider">
+    <div class="slider slider-hidden-2">
         <app-card-movie></app-card-movie>
         <app-card-movie></app-card-movie>
         <app-card-movie></app-card-movie>
