Feature: The Header component was deleted; The Movies component was deleted; The placeholder for the search input component was changed;

--- a/playvie-frontend/src/app/app.component.html
+++ b/playvie-frontend/src/app/app.component.html
@@ -1,7 +1,5 @@
 <section>
     <app-nav-bar></app-nav-bar>
-    <app-header></app-header>
-    <app-movies-slider></app-movies-slider>
-    <app-movies-slider></app-movies-slider>
+    <app-movies-highlight></app-movies-highlight>
     <app-movies-slider></app-movies-slider>
 </section>
