--- a/playvie-frontend/src/app/components/search-input/search-input.component.html
+++ b/playvie-frontend/src/app/components/search-input/search-input.component.html
@@ -1,4 +1,4 @@
 <div class="input-container">
-    <input class="input-field" type="text" placeholder="Email" name="email">
+    <input class="input-field" type="text" placeholder="What are you looking for?" name="user-input">
     <i class="fa fa-search icon"></i>
   </div>
