--- a/playvie-frontend/src/app/components/nav-bar/nav-bar.component.css
+++ b/playvie-frontend/src/app/components/nav-bar/nav-bar.component.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 0.5rem;
+    padding: 0 60px 0 0;
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.5) 60%, rgba(0,0,0,0));
     position: fixed;
     top: 0;
@@ -11,37 +11,82 @@
     z-index: 9999;
 }
 
-.menu .nav-left img{
-    width: 80px;
-    height: auto;
-    margin-right: 20px;
+.nav-left {
+  display: flex;
+  padding-left: 20px;
 }
 
-.nav-left{
-    display: flex;
-    margin-left: 20px;
+.nav-left ul {
+  padding-left: 20px;
+}
+
+.nav-left img{
+    width: 80px;
+    height: auto;
+}
+
+.nav-left img:hover {
+  cursor: pointer;
 }
 
 .menu ul{
     display: flex;
+    align-items: center;
 }
 
 .menu ul li{
-        list-style: none;
+  list-style: none;
+}
+
+.menu ul li:hover {
+  font-weight: bold;
 }
 
 .menu ul li a{
-    text-decoration: none;
-    margin-right: 20px;
-    color: var(--text-white);
+  text-decoration: none;
+  margin-right: 20px;
+  color: var(--text-white);
 
 }
 
-.nav-right{
-    display: flex;
-    margin-right: 20px;
+.nav-right ul {
+  margin-right: 20px;
 }
+
 .search-field{
-    width: 500px;
+    width: 250px;
     height: auto;
+}
+
+@media (max-width: 480px) {
+  .menu {
+    padding: 0;
+    margin: 0;
+  }
+
+  .nav-left ul {
+    display: none;
+  }
+
+  .search-field {
+    margin-right: 10px;
+  }
+
+  .nav-right {
+    display: none
+  }
+}
+
+@media (min-width: 480px) and (max-width: 800px) {
+  .menu {
+    padding: 0 20px 0 0;
+  }
+
+  .search-field {
+    margin-right: 10px;
+  }
+
+  .nav-right {
+    display: none
+  }
 }
