--- a/playvie-frontend/src/app/components/nav-bar/nav-bar.component.html
+++ b/playvie-frontend/src/app/components/nav-bar/nav-bar.component.html
@@ -15,7 +15,7 @@
     <div class="nav-right">
         <ul>
             <li><a href="#">Sign in</a></li>
-            <li><a href="#">Register</a></li>
+            <li><a href="#">Sign up</a></li>
         </ul>
     </div>
 </nav>
