--- a/playvie-frontend/src/app/components/search-input/search-input.component.css
+++ b/playvie-frontend/src/app/components/search-input/search-input.component.css
@@ -1,17 +1,20 @@
 .input-container {
     display: -ms-flexbox; /* IE10 */
     display: flex;
-    width: 100%;;
+    width: 100%;
 }
 
 .icon {
     padding: 10px;
     background: var(--input-button);
     color: var(--text-white);
-    min-width: 50px;
+    min-width: 20px;
     text-align: center;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-radius: 10px;
+}
+
+.fa-search:hover {
+  cursor: pointer;
 }
 
 .input-field {
@@ -33,3 +36,22 @@
     background: var(--input-field);
 }
 
+@media (max-width: 480px) {
+  .input-container {
+    justify-content: flex-end;
+  }
+
+  .input-field {
+    display: none
+  }
+}
+
+@media (min-width: 480px) and (max-width: 800px) {
+  .input-container {
+    justify-content: flex-end;
+  }
+
+  .input-field {
+    display: none
+  }
+}
