--- a/playvie-frontend/src/app/components/movies-highlight/movies-highlight.component.css
+++ b/playvie-frontend/src/app/components/movies-highlight/movies-highlight.component.css
@@ -3,14 +3,15 @@
     position: relative;
     height: 100vh;
 }
+
 video {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    min-height: 100%;
-    z-index: -2;
-    width: 100vw;
-    height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .highlight-description{
@@ -46,4 +47,18 @@ video {
 .highlight-content p,
 .highlight-content button{
     margin-bottom: 20px;
+}
+
+@media (max-width: 480px) {
+  .highlight-description {
+    width: 200px;
+    height: 140px;
+  }
+
+  .highlight-content > p {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
 }
