--- a/playvie-frontend/src/app/components/movies-highlight/movies-highlight.component.html
+++ b/playvie-frontend/src/app/components/movies-highlight/movies-highlight.component.html
@@ -6,6 +6,6 @@
             <app-main-button></app-main-button>
         </div>
     </div>
-    <video src="https://carontestudio.com/img/f4.mp4" autoplay="true" muted="true" loop="true"></video>
+    <video disablePictureInPicture src="https://carontestudio.com/img/f4.mp4" autoplay="true" muted="true" loop="true"></video>
 </section>
 
