Feature: The Movies Slider was change; Now it is shown a poster img; A hover statement was added to add interaction with the user; it is responsive now

--- a/playvie-frontend/src/app/components/movies-slider/movies-slider.component.html
+++ b/playvie-frontend/src/app/components/movies-slider/movies-slider.component.html
@@ -1,5 +1,5 @@
 <section class="slider-container">
-    <h1>The top ones</h1>
+    <h1>The top rated</h1>
     <div class="slider slider-hidden-2">
         <app-card-movie></app-card-movie>
         <app-card-movie></app-card-movie>
@@ -12,5 +12,33 @@
         <app-card-movie></app-card-movie>
         <app-card-movie></app-card-movie>
         <app-card-movie></app-card-movie>
+    </div>
+    <h1>Recently added</h1>
+    <div class="slider slider-hidden-2">
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+    </div>
+    <h1>Most viewed</h1>
+    <div class="slider slider-hidden-2">
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
+      <app-card-movie></app-card-movie>
     </div>
 </section>
