--- a/playvie-frontend/src/app/components/card-movie/card-movie.component.css
+++ b/playvie-frontend/src/app/components/card-movie/card-movie.component.css
@@ -1,19 +1,27 @@
 .card-movie{
-    width: 300px;
-    height: 200px;
+    padding: 8px;
+    width: auto;
+    height: auto;
     background: var(--input-button);
-    overflow: hidden;
-    margin-right: 20px;
     cursor: pointer;
 }
 
 .card-movie img{
-    height: 200px;
-    object-fit: contain;
-    object-position: center;
+    width: 150px;
+    height: auto;
 }
 
-.card-movie:hover{
-    width: 400px;
-    height: 300px;
+.card-movie img:hover {
+  width: 170px;
+}
+
+@media (max-width: 480px) {
+  .card-movie img{
+    width: 80px;
+    height: auto;
+}
+
+.card-movie img:hover {
+  width: 100px;
+}
 }
