--- a/playvie-frontend/src/app/components/card-movie/card-movie.component.html
+++ b/playvie-frontend/src/app/components/card-movie/card-movie.component.html
@@ -1,3 +1,3 @@
 <div class="card-movie">
-    <img src="./../../../assets/hVlRqVy.jpg" alt="aliceinchains">
+    <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/qNBAXBIQlnOThrVvA6mA2B5ggV6.jpg" alt="aliceinchains">
 </div>
