--- a/playvie-frontend/src/app/components/movies-slider/movies-slider.component.css
+++ b/playvie-frontend/src/app/components/movies-slider/movies-slider.component.css
@@ -1,6 +1,6 @@
 .slider-container{
     width: 100vw;
-    height: 250px;
+    height: 270px;
     padding: 5px 20px;
     background-color: black;
     position: relative;
@@ -9,13 +9,15 @@
 
 .slider{
     display: flex;
+    height: 100%;
     width: 100vw;
     overflow-x: auto;
 }
 
 .slider-container h1{
     color: var(--text-white);
-    margin-bottom: 10px;
+    margin-left: 8px;
+    margin-bottom: 4px;
 }
 
 .slider-hidden::-webkit-scrollbar{
@@ -23,20 +25,20 @@
 }
 
 .slider-hidden-2{
-    -ms-overflow-style: none;
     scrollbar-width: none;
 }
 
-.card-movie{
-    width: 300px;
-    height: 200px;
-    background: var(--input-button);
-    overflow: hidden;
-    margin-right: 20px;
+app-card-movie {
+  height: 240px;
 }
 
-.card-movie img{
-    height: 200px;
-    object-fit: contain;
-    object-position: center;
+@media (max-width: 480px) {
+  app-card-movie {
+    height: 140px;
+  }
+
+  .slider-container{
+    height: 140px;
+}
+
 }
